# hybridock-pep

./: .gitignore  .gitmodules  CLAUDE.md  INSTALL.md  LICENSE  MODEL_CARD.md  Makefile  PUBLISHING_TIMELINE.md  README.md  RESULTS.md  SECOND_GEN_AI_STATS.md  SM_TableS1.xls  SM_TableS2.xls  TUESDAY_WORKGUIDE.md  confidence_v2_failure_report.md  coverage.json  launch_ui.sh  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
data/: affinity_ai_nofix.joblib  affinity_ai_sizefix.joblib  affinity_crystal_augmented.joblib  affinity_crystal_ifp.joblib  affinity_crystal_sizefix.joblib  affinity_pooled_prodn.joblib  affinity_rank_ifp.joblib  affinity_realpose.joblib  all_binding_affinity.csv  atlas_tcr_pmhc.tsv  audit_holdout_eval.json  benchmark30.csv  benchmark300.csv  benchmark_crystal.json  benchmark_crystal_scored.json  benchmark_crystal_scored_baseline.json  benchmark_crystal_scored_ie3traj.json  calibration.json  calibration_full.json  calibration_geometry_rgperL_candidate.json  calibration_kd_clean.json  calibration_length_router.json  calibration_per_family.json  calibration_pooled_candidate.json  calibration_v1_1_production.json  calibration_v1_1_production_ridge.json  calibration_v1_2_production_entropy.json  calibration_v1_4_balanced.json  calibration_wang.json  conformal_calibration.json  crystal65_gen.csv  e176_short_n250.jsonl  e212_ppikb_geom.jsonl  e228_manifest_all.json  e228_manifest_min2.json  e228_manifest_t100.json  e228_pilot_manifest.json  e229_hydration.jsonl  e230_rism.jsonl  e230_t100_rism.jsonl  (+120 more)
(+1032 files in other folders)
