[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybridock-pep"
version = "0.1.0"
description = "Hybrid peptide docking tool (RAPiDock + physics-based rescoring)"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Ram" }]
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
scoring = [
    "meeko>=0.5",
    "vina>=1.2.5",
    "scipy>=1.11",
    "biopython>=1.81",
    "scikit-learn>=1.8,<1.9",
]
mmgbsa = [
    "openmm>=8.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.9",
]

[project.scripts]
hybridock-pep = "hybridock_pep.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hybridock_pep = ["py.typed"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
markers = [
    "slow: slow integration tests requiring full score-env tool stack (Vina, Meeko, ADFRsuite)",
]
testpaths = ["tests"]
norecursedirs = ["hybridock-pep", "third_party", "envs", "runs", "logs", "data", ".git"]
